--- a/FA_swapnil_kumbhar_ C0854325_iOS/View/Base.lproj/Main.storyboard
+++ b/FA_swapnil_kumbhar_ C0854325_iOS/View/Base.lproj/Main.storyboard
@@ -164,6 +164,14 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="place1" destination="oh0-Wr-CxQ" id="aCd-68-aKC"/>
+                        <outlet property="place2" destination="Wb4-9j-HeR" id="olB-4Y-e83"/>
+                        <outlet property="place3" destination="9yP-uY-nWp" id="Ioz-lB-dNe"/>
+                        <outlet property="place4" destination="w7u-30-wCl" id="IPD-df-WIp"/>
+                        <outlet property="place5" destination="3nx-yV-yAo" id="xGc-gU-naV"/>
+                        <outlet property="place6" destination="g4j-ze-yf4" id="h8a-cq-X3Y"/>
+                        <outlet property="place7" destination="gJr-YG-Lu7" id="gqh-Dv-Vtz"/>
+                        <outlet property="place8" destination="ZEw-Bx-aGl" id="V2Q-ON-PVP"/>
+                        <outlet property="place9" destination="J8v-p9-YXg" id="bIu-15-ZXY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bRE-tN-2L9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
