Data persistence added for board

--- a/FA_swapnil_kumbhar_ C0854325_iOS/View/Base.lproj/Main.storyboard
+++ b/FA_swapnil_kumbhar_ C0854325_iOS/View/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                     </attributedString>
                                 </state>
                                 <connections>
-                                    <segue destination="D9W-0t-ya0" kind="show" id="BBk-oD-MwI"/>
+                                    <segue destination="D9W-0t-ya0" kind="show" identifier="game_screen_segue" id="BBk-oD-MwI"/>
                                 </connections>
                             </button>
                         </subviews>
